# PersonalAIBot

./: main.py  pyproject.toml  requirements.txt
agent/: __init__.py  agent.py
models/: __init__.py  chat_models.py
